lact-daemon/src/tests/snapshots/lact_daemon__tests__apply_config__amd__rx6900xt.snap
---
source: lact-daemon/src/tests/mod.rs
expression: write_commands
---
[
    "card0/device/pp_od_clk_voltage: r\n",
    "card0/device/pp_od_clk_voltage: s 0 750\n",
    "card0/device/pp_od_clk_voltage: s 1 2600\n",
    "card0/device/pp_od_clk_voltage: vo -10\n",
    "card0/device/power_dpm_force_performance_level: auto",
    "card0/device/hwmon/hwmon5/pwm1_enable: 1",
    "card0/device/hwmon/hwmon5/pwm1: 255",
    "card0/device/pp_od_clk_voltage: c\n",
]
