lact-daemon/src/tests/snapshots/lact_daemon__tests__apply_config__amd__rx7800xt.snap
---
source: lact-daemon/src/tests/mod.rs
expression: write_commands
---
[
    "card1/device/pp_od_clk_voltage: r\n",
    "card1/device/pp_od_clk_voltage: s 1 3000\n",
    "card1/device/pp_od_clk_voltage: vo -190\n",
    "card1/device/power_dpm_force_performance_level: auto",
    "card1/device/gpu_od/fan_ctrl/fan_zero_rpm_enable: 0\n",
    "card1/device/gpu_od/fan_ctrl/fan_curve: 0 25 80\n",
    "card1/device/gpu_od/fan_ctrl/fan_curve: 1 100 80\n",
    "card1/device/gpu_od/fan_ctrl/fan_curve: 2 100 80\n",
    "card1/device/gpu_od/fan_ctrl/fan_curve: 3 100 80\n",
    "card1/device/gpu_od/fan_ctrl/fan_curve: 4 100 80\n",
    "card1/device/gpu_od/fan_ctrl/fan_zero_rpm_enable: 1\n",
    "card1/device/gpu_od/fan_ctrl/fan_zero_rpm_stop_temperature: 50\n",
    "card1/device/hwmon/hwmon4/power1_cap: 280000000",
    "card1/device/gpu_od/fan_ctrl/fan_zero_rpm_stop_temperature: c\n",
    "card1/device/gpu_od/fan_ctrl/fan_zero_rpm_enable: c\n",
    "card1/device/gpu_od/fan_ctrl/fan_curve: c\n",
    "card1/device/gpu_od/fan_ctrl/fan_zero_rpm_enable: c\n",
    "card1/device/pp_od_clk_voltage: c\n",
]
