lact-daemon/src/tests/snapshots/lact_daemon__tests__apply_config__amd__vega56.snap
---
source: lact-daemon/src/tests/mod.rs
expression: write_commands
---
[
    "card0/device/pp_od_clk_voltage: r\n",
    "card0/device/power_dpm_force_performance_level: auto",
    "card0/device/pp_od_clk_voltage: s 0 852 800\n",
    "card0/device/pp_od_clk_voltage: s 1 991 900\n",
    "card0/device/pp_od_clk_voltage: s 2 1138 950\n",
    "card0/device/pp_od_clk_voltage: s 3 1269 1000\n",
    "card0/device/pp_od_clk_voltage: s 4 1312 1050\n",
    "card0/device/pp_od_clk_voltage: s 5 1474 1100\n",
    "card0/device/pp_od_clk_voltage: s 6 1538 1150\n",
    "card0/device/pp_od_clk_voltage: s 7 1630 1200\n",
    "card0/device/pp_od_clk_voltage: m 0 167 800\n",
    "card0/device/pp_od_clk_voltage: m 1 500 800\n",
    "card0/device/pp_od_clk_voltage: m 2 700 900\n",
    "card0/device/pp_od_clk_voltage: m 3 920 950\n",
    "card0/device/power_dpm_force_performance_level: auto",
    "card0/device/pp_od_clk_voltage: c\n",
]
